--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@ body {
     font-family: 'Courier New', Courier, monospace;
     background-color: mistyrose;
 }
+h1,
+h2,
+h3 {
+    text-align: center;
+}
