--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,7 @@ body {
 
 .centered {
     text-align: center;
-    align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
